[package]
name = "ble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blehr = "0.1.0"
btleplug = "0.9.0"
rand = "0.8.4"
tokio-stream = { version = "0.1", features = ["sync"]}
uuid = "0.8.2"
pretty_env_logger = "0.4.0"
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1.10.0", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0.66"
futures = "0.3.19"
byteorder = "1.4.3"
serde_yaml = "0.8.23"
serde_derive = "1.0.133"
serde = { version = "1.0.133", features = ["derive"] }
clap = { version = "3.0.1", features = ["derive"] }
thiserror = "1.0.30"
nb = "1"
paho-mqtt = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.3"
displaydoc = "0.2.3"
parking_lot = "0.11.1"
tokio = { version = "1.10.0", features = ["rt", "macros"] }
bluez-async = "0.5.0"

